When creating a folder through webdav, read and discard the content sent by the web sever.

BUG: 322550
FIXED-IN: 4.14.2
REVIEW: 120439