kioslave/http/http.cpp
@@ -1301,7 +1301,7 @@ void HTTPProtocol::mkdir( const KUrl& url, int )
   m_request.url.setQuery(QString());
   m_request.cacheTag.policy = CC_Reload;
 
-  proceedUntilResponseHeader();
+  proceedUntilResponseContent(true);
 
   if ( m_request.responseCode == 201 )
     davFinished();
